# api-tasks

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2018-03-17-180012_heroes/: up.sql
migrations/2019-05-26-221027_create_tasks/: up.sql
src/: main.rs  schema.rs  task.rs
