[package]
name = "tasks-api"
version = "0.1.0"
authors = ["iamsimakov"]

[dependencies]
rocket = "0.4.1"
serde = { version = "1.0.91", features = ["derive"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
diesel = { version = "1.4.2", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4.0"
log = "0.4"

[dev-dependencies]
parking_lot = { version = "0.8", features = ["nightly"] }
rand = "0.6"

[dependencies.rocket_contrib]
version = "0.4.1"
default_features = false
features = ["diesel_mysql_pool", "json"]
